--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "milon/barcode": "^10.0",
-        "mpdf/mpdf": "^8.0"
+        "mpdf/mpdf": "^8.0",
+        "rakibhstu/number-to-bangla": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
